deployment/pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matching-frontend
  labels:
    app: matching-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matching-frontend
  template:
    metadata:
      labels:
        app: matching-frontend
    spec:
      containers:
      - name: matching-frontend
        image: peacecheejecake/matching-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8888
      volumes:
        - name: my-volume
          persistentVolumeClaim:
            claimName: matching-pvc
