deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matching-frontend-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "matching.kbfg.kubepia.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nexthouse-fe
            port:
              number: 8080
