deployment/k-config-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matching-svc
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #kubernetes.io/TLS-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  #tls:
  #- secretName: tls-secret
  rules:
  - host: matching.169.56.100.104.nip.io
    http:
      paths:
      - path: /match
        pathType: Prefix
        backend:
          service:
            name: matching
            port: 
              number: 8081
      - path: /index
        pathType: Prefix
        backend:
          service:
            name: matching-frontend
            port:
              number: 80
